correct new paths in makefile

--- a/Computing/makefile
+++ b/Computing/makefile
@@ -1,5 +1,5 @@
-lstsetup = ../../listings-setup.tex
-optsetup = ../../options-setup.sty
+lstsetup = ${BOOK_DIR}/util/listings-setup.tex
+optsetup = ${BOOK_DIR}/util/options-setup.sty
 inputs = cl1.md cl2.md cl3.md clmkl.md
 computing.pdf : $(inputs)
 	pandoc -s -o computing.pdf $(inputs) --listings -H $(lstsetup) -H $(optsetup)
