Some changes.  I expect clgcc and probably clmkl wont compile.

--- a/Computing/makefile
+++ b/Computing/makefile
@@ -1,6 +1,6 @@
 lstsetup = ${BOOK_DIR}/util/listings-setup.tex
 optsetup = ${BOOK_DIR}/util/options-setup.sty
-inputs = cl1.md cl2.md cl3.md clmkl.md
+inputs = cl1.md cl2.md cl3.md clmkl.md clgcc.md
 computing.pdf : $(inputs)
 	pandoc -s -o computing.pdf $(inputs) --listings -H $(lstsetup) -H $(optsetup)
 
